--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
     "@react-navigation/stack": "^6.3.14",
+    "i18next": "^22.4.10",
     "react": "18.2.0",
+    "react-i18next": "^12.1.5",
     "react-native": "0.71.3",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-keychain": "^8.1.1",
+    "react-native-linear-gradient": "^2.6.2",
+    "react-native-paper": "^5.2.0",
+    "react-native-pinchable": "^0.2.1",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
