--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-gesture-handler": "^2.9.0",
     "react-native-keychain": "^8.1.1",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-localize": "^2.2.4",
     "react-native-paper": "^5.2.0",
     "react-native-pinchable": "^0.2.1",
     "react-native-reanimated": "^2.14.4",
