--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,4 @@
 {
-    "java.project.sourcePaths": [
-        "src/components/profile/Profile.js"
-    ]
+  "java.project.sourcePaths": ["src/components/profile/Profile.js"],
+  "java.configuration.updateBuildConfiguration": "interactive"
 }
