--- a/package.json
+++ b/package.json
@@ -10,25 +10,35 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.18.1",
+    "@react-native-community/datetimepicker": "^7.0.1",
     "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/drawer": "^6.6.0",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
     "@react-navigation/stack": "^6.3.14",
+    "axios": "^1.3.6",
     "i18next": "^22.4.10",
     "react": "18.2.0",
     "react-i18next": "^12.1.5",
     "react-native": "0.71.3",
+    "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-keychain": "^8.1.1",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-localize": "^2.2.4",
+    "react-native-modal-datetime-picker": "^15.0.0",
     "react-native-paper": "^5.2.0",
+    "react-native-paper-dropdown": "^0.0.5",
     "react-native-pinchable": "^0.2.1",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-share": "^8.2.2",
+    "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
