--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-i18next": "^12.1.5",
     "react-native": "0.71.3",
     "react-native-animatable": "^1.3.3",
+    "react-native-flash-message": "^0.4.1",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-keychain": "^8.1.1",
     "react-native-linear-gradient": "^2.6.2",
@@ -38,7 +39,8 @@
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
-    "rn-fetch-blob": "^0.12.0"
+    "rn-fetch-blob": "^0.12.0",
+    "rn-secure-storage": "^2.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
