--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "react-native-paper": "^5.2.0",
     "react-native-paper-dropdown": "^0.0.5",
     "react-native-pinchable": "^0.2.1",
+    "react-native-qrcode-svg": "^6.2.0",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-share": "^8.2.2",
+    "react-native-svg": "^13.9.0",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
