--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -26,6 +26,13 @@
             <category android:name="android.intent.category.LAUNCHER" />
               <action android:name="android.intent.action.DOWNLOAD_COMPLETE" />
         </intent-filter>
+        <intent-filter android:label="musicroom">
+          <action android:name="android.intent.action.VIEW" />
+          <category android:name="android.intent.category.DEFAULT" />
+          <category android:name="android.intent.category.BROWSABLE" />
+          <data android:scheme="alfolio-app" android:host="alfolio" />
+        </intent-filter>
       </activity>
+      <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
     </application>
 </manifest>
