--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-i18next": "^12.1.5",
     "react-native": "0.71.3",
     "react-native-animatable": "^1.3.3",
+    "react-native-camera": "^4.2.1",
     "react-native-flash-message": "^0.4.1",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-keychain": "^8.1.1",
@@ -32,6 +33,7 @@
     "react-native-paper": "^5.2.0",
     "react-native-paper-dropdown": "^0.0.5",
     "react-native-pinchable": "^0.2.1",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
