--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@ethersproject/shims": "^5.7.0",
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-community/datetimepicker": "^7.0.1",
     "@react-native-picker/picker": "^2.4.8",
@@ -18,6 +19,7 @@
     "@react-navigation/native-stack": "^6.9.10",
     "@react-navigation/stack": "^6.3.14",
     "axios": "^1.3.6",
+    "ethers": "^5.7.2",
     "i18next": "^22.4.10",
     "react": "18.2.0",
     "react-i18next": "^12.1.5",
@@ -26,6 +28,7 @@
     "react-native-camera": "^4.2.1",
     "react-native-flash-message": "^0.4.1",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-keychain": "^8.1.1",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-localize": "^2.2.4",
